[giphy] fix (scrollbar work around): remove mac work arround

--- a/packages/plugin-giphy/statics/styles/giphy-selecter.scss
+++ b/packages/plugin-giphy/statics/styles/giphy-selecter.scss
@@ -57,17 +57,6 @@
   margin-left: -2px;
 }
 
-div::-webkit-scrollbar {
-  width: 4px;
-}
-div::-webkit-scrollbar-thumb {
-  background: #000000;
-  border-radius: 4px;
-  width: 4px;
-  margin-left: -2px;
-}
-
-
 .giphy_selecter_trending {
   font-family: Helvetica;
   font-size: 10px;
